# QgisPlugin

./: .env.example  .gitignore  CHANGELOG.md  COOKBOOK.md  FORK.md  GUIA_PYPI.md  MEJORAS.md  README-ARQ.md  README-DEV.md  README-GIS.MD  README-GIS.md  README-MCP.MD  README-MCP.md  README-old.md  README.md  __init__.py  compile_resources.bat  geofinderdialog.py  metadata.txt  openicgc.py  product_metadata.json  pyproject.toml  resources.qrc  resources_rc.py  ui_geofinder.ui  wsse.py
.github/workflows/: publish.yml
data/: cat_lidar1k_limits.geojson  cat_limits.geojson  cat_rect_limits.geojson  cat_simple_limits.geojson  cat_tall25k_limits.geojson  cat_tall5k_limits.geojson  product_metadata.json
docs/: README.md  icgc.html  index-ca.html  index-es.html  index.html  online-ca.html  online-es.html  online.html  plugin_github.html  plugin_icgc.html  plugin_issues.html  plugin_qgis.html  send_email.html
geofinder/: __init__.py  exceptions.py  geofinder.py  mcp_server.py  pelias.py  transformations.py
geofinder/models/: __init__.py  response.py  result.py
geofinder/utils/: cache.py  logging.py
geofinder3/: __init__.py  catastro.py  geofinder.py  pelias.py  wsse.py
i18n/: openicgc.pro  openicgc_ca.ts  openicgc_es.ts
images/: search_coord.pdn  search_name.pdn
lib/geofinder3/: geofinder.py  wsse.py
lib/qlib3/base/: aboutdialog.py  checkboxbuttonsmessagebox.py  dependencies.py  download.py  errors.py  loginfodialog.py  miniwebbrowser.py  pluginbase.py  progressdialog.py  resources.qrc  resources_rc.py  stylesdialog.py  timeseriesdialog.py  transparencydialog.py  ui_about.ui  ui_loginfo.ui  ui_styles.ui  ui_timeseries.ui  ui_transparency.ui
lib/qlib3/geofinderdialog/: geofinderdialog.py  resources.qrc  ui_geofinder.ui
lib/qtrangeslider/: _generic_slider.py  _version.py  pypi QtRangeSlider.url
lib/resources3/: __init__.py  fme.py  http.py  wms.py
lib/resources3/symbols/: ct1m_disponible.qml  ct1mv22_c.qml  ct1mv22_f.qml  ct1mv22_l.qml  ct1mv22_n.qml  ct1mv22_p.qml  ct1mv22_t.qml  divisions-administratives-provincies-ref.qml
lib/suds/: pypi suds-py3.url
lib/utilities/: .gitignore  email.py
qlib3/base/: anaglyphdialog.py  checkboxbuttonsmessagebox.py  datedialog.py  dependencies.py  download.py  errors.py  log.py  multipleinputdialog.py  pluginbase.py  progressdialog.py  qtextra.py  resources.qrc  timeseriesdialog.py  transparencydialog.py  ui_about.ui  ui_anaglyph.ui  ui_loginfo.ui  ui_styles.ui  ui_timeseries.ui  ui_transparency.ui
qlib3/downloaddialog/: downloaddialog.py  ui_download.ui
qlib3/geofinderdialog/: __init__.py  geofinderdialog.py  resources.qrc  ui_geofinder.ui
qlib3/photosearchselectiondialog/: photosearchselectiondialog.py  resources.qrc  resources_rc.py  ui_photosearchselection.ui
reports/: A4H.qpt  A4V.qpt
resources3/: fme.py  http.py  wfs.py  wms.py
resources3/symbols/: batimetria.qml  bseccen.qml  ct1mv22_f.qml  ct1mv22_p.qml  divisions-administratives-caps-municipi-ref.qml  divisions-administratives-catalunya-ref.qml  divisions-administratives-comarques-ref.qml  divisions-administratives-municipis-ref.qml  divisions-administratives-vegueries-ref.qml  orto-costa.qml  orto-historica.qml  tall-5k.qml
symbols/: caps_municipi.qml  comarques.qml  municipis.qml  ombrejat.qml  provincies.qml  ressaltat_alçades.qml  talls.qml
tests/: __init__.py  conftest.py  test_batch.py  test_geofinder.py  test_integration_install.py  test_mcp_standalone.py  test_migration.py  test_module_run.py  test_retry.py
tests/functional/: test_integration_icgc.py  test_integration_install.py  test_migration.py
tests/integration/: test_batch.py  test_complex_failures.py  test_concurrency.py  test_dependency_injection.py  test_geofinder.py  test_retry.py  test_robustness.py
tests/mcp/: test_mcp_standalone.py  test_mcp_tools.py
tests/mcp_server/: test_mcp_tools.py
tests/unit/: test_batch_failures.py  test_cache.py  test_exceptions.py  test_models.py  test_parsing.py
